--- a/paraphase/data/genes.yaml
+++ b/paraphase/data/genes.yaml
@@ -1,17 +1,4 @@
-# accepted_genes: [
-#     "smn1",
-#     "rccx",
-#     "pms2",
-#     "strc",
-#     "ncf1",
-#     "cfc1",
-#     "neb",
-#     "ikbkg",
-#     "f8",
-# ]
-
+genes_to_call: []
 genome_depth_genes: ["smn1", "strc", "ncf1"]
-
 no_vcf_genes: ["f8"]
-
 check_sex_genes: ["opn1lw"]
