--- a/paraphase/data/genes.yaml
+++ b/paraphase/data/genes.yaml
@@ -1,4 +1,4 @@
 genes_to_call: []
 no_genome_depth_genes: ["pms2", "neb", "cfc1", "ikbkg", "opn1lw", "rccx"]
-no_vcf_genes: ["CFH", "CFHR3"]
+no_vcf_genes: []
 two_reference_regions_genes: ["smn1", "pms2", "strc", "ikbkg", "ncf1"]
